--- a/css/root.css
+++ b/css/root.css
@@ -9,7 +9,7 @@
   --second-font-color: rgb(51,51,51);
   --gray-font-color: #7D7D7D;
 
-  --main-general-color: #dedede;
+  --main-general-color: #c5c5c5;
   --gradient-color-one: #ffffff;
 
   /* --main-general-color: #828181;
