--- a/css/notes.css
+++ b/css/notes.css
@@ -266,39 +266,38 @@
 /* Notes section */
 
 .notes__container{
-  /* columns: 4 400px;
-  column-gap: var(--mb-1); */
-  display: flex;
-  justify-content: center;
   margin: var(--mb-3) var(--mb-5);
   padding-top: 9rem;
-  height: 100%;
+  height: 100vh;
   overflow-x: hidden;
 }
 
 .note{
   display: flex;
   flex-direction: column;
-  background-color: #F5F5F5;
+  background-color: #bbbbbb;
   border-radius: 10px;
   margin-bottom: var(--mb-1);
-  max-width: 100%;
+  width: 450px;
   padding: var(--mb-2) var(--mb-3);
 }
 
 .note__header{
   display: flex;
-  align-items: baseline;
-  gap: var(--mb-0-5);
+  align-items: center;
+  gap: var(--mb-5);
 }
 
-.note__header p:nth-child(1){
+.note__title p:nth-child(1){
+  display: inline;
   font-size: 2rem;
   font-weight: 600;
   color: var(--second-font-color);
+  margin-right: 1rem;
 }
 
-.note__header p:nth-child(2){
+.note__title p:nth-child(2){
+  display: inline;
   color: var(--gray-font-color);
 }
 
@@ -344,4 +343,17 @@
 }
 .note__tag:nth-child(6){
   color:rgb(255, 172, 84);
+}
+
+.tags__squares{
+  display: grid;
+  grid-template-columns: repeat(2, 30px);
+  gap: 3px;
+}
+
+.tag__square{
+  height: 30px;
+  width: 30px;
+  background-color: red;
+  border-radius: 5px;
 }
