--- a/css/root.css
+++ b/css/root.css
@@ -5,8 +5,7 @@
   --header-height: 6rem;
 
   --main-font-color: #1D1D1F;
-  /* --main-font-color: rgb(255, 255, 255); */
-  --second-font-color: rgb(51,51,51);
+  --second-font-color: rgb(255, 255, 255);
   --gray-font-color: #7D7D7D;
 
   --main-general-color: #dedede;
@@ -88,8 +87,10 @@ img{
 
 body{
   position: relative;
+  padding-top: var(--header-height);
   background: linear-gradient(114.29deg, var(--gradient-color-one) 25.84%, var(--main-general-color) 89.84%);
   height: var(--min-body-height);
+  overflow: hidden;
   scroll-behavior: smooth;
 }
 
