Update notes design

--- a/css/root.css
+++ b/css/root.css
@@ -90,7 +90,7 @@ body{
   padding-top: var(--header-height);
   display: flex;
   flex-direction: column;
-  /* min-height: var(--min-body-height); */
+  min-height: var(--min-body-height);
   /* overflow: hidden; */
   scroll-behavior: smooth;
 }
@@ -110,4 +110,35 @@ body{
   justify-content: center;
   border-radius: 10px;
   padding: 1rem;
+}
+
+
+/* Global useful animation */
+
+.scale-up{
+  transform: scale(1);
+  transition: all .5s;
+}
+
+.scale-up:hover{
+  transform: scale(1.03);
+}
+
+
+@keyframes shake {
+  10%, 90% {
+    transform: translate3d(-1px, 0, 0);
+  }
+  
+  20%, 80% {
+    transform: translate3d(2px, 0, 0);
+  }
+
+  30%, 50%, 70% {
+    transform: translate3d(-4px, 0, 0);
+  }
+
+  40%, 60% {
+    transform: translate3d(4px, 0, 0);
+  }
 }
