--- a/css/home.css
+++ b/css/home.css
@@ -1,17 +1,83 @@
-
-/* Maxed animations */
-
-.scale-up{
-  transform: scale(1);
-  transition: all .5s;
-}
-
-.scale-up:hover{
-  transform: scale(1.03);
-}
-
-
 /* upper */
+@keyframes translate-left {
+  0%{
+    transform: translateX(-100%);
+  }
+
+  100%{
+    transform: translateX(0%);
+  }
+}
+
+@keyframes translate-right {
+  0%{
+    transform: translateX(100%);
+  }
+
+  100%{
+    transform: translateX(0%);
+  }
+}
+
+
+@keyframes scale-initial {
+  0%{
+    transform: scale(0);
+  }
+
+  50%{
+    transform: scale(1.05);
+  }
+
+  100%{
+    transform: scale(1);
+  }
+}
+
+@keyframes floating {
+  0%{
+    transform: translatey(0px);
+  }
+
+  50%{
+    transform: translatey(-5px);
+  }
+
+  100%{
+    transform: translateY(0px);
+  }
+  
+}
+
+@keyframes shake {
+  10%, 90% {
+    transform: translate3d(-0.5px, 0, 0);
+  }
+  
+  20%, 80% {
+    transform: translate3d(1px, 0, 0);
+  }
+
+  30%, 50%, 70% {
+    transform: translate3d(-2px, 0, 0);
+  }
+
+  40%, 60% {
+    transform: translate3d(2px, 0, 0);
+  }
+}
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
 
 @keyframes slide-in-text {
   0% {
@@ -60,7 +126,7 @@
   background-image: url('../assets/img/backgroundGradient-1.jpg');
   left: -90rem;
   right: 0;
-  animation: 2s ease 0s 1 slide-in-diagonal;
+  animation: 2s ease 2s 1 slide-in-diagonal;
   animation-fill-mode: forwards;
   z-index: -1;
 
@@ -138,10 +204,12 @@
 .upper__card-item{
   background: linear-gradient(122.62deg, #48BFE3 13.21%, #7400B8 114.06%);
   flex-direction: column;
+  animation: 1.5s ease-in-out 0s 1 scale-initial;
 }
 
 .upper__card-item-picture img{
   width: 20rem; /** This is probably the best size */
+  animation: 1s ease 2s infinite floating;
 }
 
 .upper__card-item-content{
@@ -170,6 +238,8 @@
   grid-template-rows: repeat(2, 1fr);
   padding: 0.5rem;
   grid-area: cars;
+  transform: translateX(-100%);
+  animation: 2s ease 1.5s 1 translate-left forwards; /* For now but works */
 }
 
 .downwards__leftside-upper{
@@ -183,10 +253,12 @@
   grid-area: lef;
 }
 
-.downwards__leftside-upper__leftside-card-item{
+.downwards__leftside-upper__leftside-card-item {
   background-color: #F6F6FD; /*! Color to add */
   flex-direction: column;
   gap: 5px;
+  /* transform: translateX(-100%);
+  animation: 2s ease 0.5s 1 translate-left forwards; */
 }
 
 .downwards__leftside-upper__leftside-card-item__toptext p{
@@ -238,10 +310,22 @@
 
 .downwards__leftside-upper__rightside-card-item{
   background: linear-gradient(122.62deg, #72EFDD 20.72%, #7400B8 114.06%);
+  display: flex;
+  flex-direction: column;
+  /* transform: translateY(300%);
+  animation: 2s ease 1.5s 1 translate-up forwards; */
 }
 
-.downwards__leftside-upper__rightside-card-item img{
+.downwards__leftside-upper__rightside-card-item img:nth-child(1){
   width: 10rem;
+}
+
+.downwards__leftside-upper__rightside-card-item img:nth-child(2){
+  width: 2rem;
+}
+
+.downwards__leftside-upper__rightside-card-item:hover img:nth-child(2){
+  animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
 }
 
 
@@ -259,6 +343,8 @@
   /* background: url('../assets/img/gradientImage.png');  */
   background-size: 100%;
   background-repeat: no-repeat;
+  /* transform: translateX(-150%);
+  animation: 2s ease 2s 1 translate-left forwards; */
 }
 
 .downwards__leftside-downwards__leftside-card-item img{
@@ -273,10 +359,51 @@
 
 .downwards__leftside-downwards__rightside-card-item{
   background: url('../assets/img/gradientImage.png');
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
 }
 
 .downwards__leftside-downwards__rightside-card-item img{
   width: 15rem;
+}
+
+.circles{
+  height: 50px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+}
+
+.circle{
+  display: flex;
+  height: 100%;
+  width: 50px;
+  border-radius: 50%;
+  transition: all .5s ease;
+}
+
+.circle:nth-child(1){
+  background-color: #C4F0C3;
+}
+.circle:nth-child(2){
+  background-color: #BDE9EF;
+}
+.circle:nth-child(3){
+  background-color: #E2AFE7;
+}
+
+.downwards__leftside-downwards__rightside-card-item:hover .circle:nth-child(1){
+  transform: scale(1.1);
+}
+
+.downwards__leftside-downwards__rightside-card-item:hover .circle:nth-child(2){
+  transform: scale(0.8);
+}
+
+.downwards__leftside-downwards__rightside-card-item:hover .circle:nth-child(3){
+  transform: scale(1.3);
 }
 
 /* Downwards Bottom Right Right Corner */
@@ -284,10 +411,17 @@
 .downwards__rightside-card{
   padding: 0.5rem;
   grid-area: car;
+  transform: translateX(100%);
+  animation: 2s ease 1.5s 1 translate-right forwards;
 }
 
 .downwards__rightside-card-item{
-  background: url('../assets/img/gradientImage.png');
+  background: linear-gradient(122.62deg, #7400B8 13.21%, #F72585 114.06%);
+  background-size: 200%;
+}
+
+.downwards__rightside-card-item:hover{
+  animation: 8s linear 0s gradient infinite forwards;
 }
 
 .downwards__rightside-card-item img{
