--- a/css/notes.css
+++ b/css/notes.css
@@ -25,6 +25,32 @@
   fill: var(--main-general-color);
 }
 
+/* Note creator activation */
+
+.note__creator-activate{
+  position: fixed;
+  bottom: 1rem;
+  right: 1rem;
+}
+
+.button-plus{
+  background: linear-gradient(180deg, rgba(240, 85, 170, 0.5) 0%, rgba(198, 78, 198, 0.5) 100%);
+  height: 70px;
+  width: 70px;
+  border-radius: 50%;
+  padding: 0.8rem;
+  transition: all .5s ease;
+}
+
+.button-plus img{
+  width: 100%;
+}
+
+.button-plus:hover{
+  cursor: pointer;
+  transform: scale(1.2);
+}
+
 
 /* Note creator */
 
@@ -267,7 +293,7 @@
 
 .notes__container{
   margin: var(--mb-3) var(--mb-5);
-  padding-top: 9rem;
+  /* padding-top: 9rem; */
   height: 100vh;
   overflow-x: hidden;
 }
@@ -275,10 +301,10 @@
 .note{
   display: flex;
   flex-direction: column;
-  background-color: #bbbbbb;
+  background-color: #F5F5F5; /* This needs a variable */
   border-radius: 10px;
   margin-bottom: var(--mb-1);
-  width: 450px;
+  width: 350px;
   padding: var(--mb-2) var(--mb-3);
 }
 
@@ -292,7 +318,7 @@
   display: inline;
   font-size: 2rem;
   font-weight: 600;
-  color: var(--second-font-color);
+  color: var(--main-font-color);
   margin-right: 1rem;
 }
 
@@ -303,7 +329,7 @@
 
 .note__description{
   margin-top: var(--mb-0-75);
-  color: var(--second-font-color);
+  color: var(--main-font-color);
   max-width: 400px;
 }
 
