--- a/css/navBar.css
+++ b/css/navBar.css
@@ -29,7 +29,7 @@
   display: flex;
   justify-content: space-between;
   flex-shrink: 0;
-  margin-right: var(--mb-5);
+  margin-right: 4rem;
 }
 
 .nav__link, 
