--- a/css/login.css
+++ b/css/login.css
@@ -3,9 +3,6 @@
   height: 100%;
 }
 
-.section-title{
-  margin-bottom: var(--mb-2);
-}
 
 .subtitle{
   font-weight: 400;
@@ -18,7 +15,7 @@
 .image{
   width: 100%;
   height: 100%;
-  padding-top: var(--header-height);
+  padding: var(--header-height) 0 0 0;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -28,8 +25,8 @@
 .form_body{
   background: url('../assets/img/gradientImage.png') no-repeat;
   background-size: cover;
-  background-position: 50%;
-  width: 70%;
+  background-position: 20%;
+  /* width: 70%; */
   border-radius: 20px;
   padding: var(--mb-1-5) var(--mb-2);
   display: grid;
@@ -211,6 +208,7 @@
   font-size: 1rem;
   font-weight: 700;
   border: 0;
+  transition: all .15s ease;
 }
 
 
@@ -225,9 +223,7 @@
 }
 
 .signup:hover{
-  background-color: var(--white-background);
-  color: var(--main-font-color);
-  border: 1px solid var(--main-font-color);
+  border: 1px solid white;
 }
 
 .signup:active{
@@ -235,9 +231,7 @@
 }
 
 .signin:hover{
-  background-color: var(--main-font-color); 
-  border: 0;
-  color: var(--white-background)
+  border: 1px solid white;
 }
 
 .signin:active{
