--- a/css/root.css
+++ b/css/root.css
@@ -11,6 +11,7 @@
 
   --background-color-cards: #FBFBFD;
 
+  --small-font-size: 0.8rem;
   --normal-font-size: 1rem;
   --medium-font-size: 1.5rem;
   --big-font-size: 2rem;
